Fix DevTools throttling.

This was broken in  https://codereview.chromium.org/2978443002, which
completely refactored network stack configuration, and no tests caught
the breakage.

Bug: 746576
Change-Id: Ib0fdd0fff3a988c91302b4ba6778a41b55b20d9a